fix visible Breacrumb scrollbar

--- a/src/shared/breadcrumb/breadcrumb.component.scss
+++ b/src/shared/breadcrumb/breadcrumb.component.scss
@@ -1,9 +1,10 @@
 .container {
-  overflow-x: hidden;
   margin: 1rem auto 1rem;
+
   a {
     height: 24px;
     margin-right: 5px;
+
     span {
       letter-spacing: 2px;
     }
